# douyin-video-translator

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run_translate.py  start.sh  web_ui.py
app/: __init__.py  main.py
app/api/: confirmation_routes.py  dependencies.py  routes.py
app/core/: __init__.py  celery_app.py  config.py  dependencies.py
app/middleware/: __init__.py  bot_protection.py
app/models/: __init__.py  confirmation_schemas.py  job.py  pipeline.py  schemas.py
app/services/: __init__.py  audio_extractor.py  checkpoint_manager.py  downloader.py  gender_detector.py  job_store.py  pipeline.py  speech_recognizer.py  subtitle_extractor.py  translator.py  video_composer.py  vocal_isolator.py  voice_preview.py  voice_synthesizer.py
app/tasks/: __init__.py  cleanup_task.py  expiry_task.py  resume_task.py  translation_task.py
app/utils/: __init__.py
k8s/: celery-worker.yaml  ingress.yaml
tests/: __init__.py  conftest.py
tests/integration/: test_full_pipeline.py  test_pipeline_checkpoints.py
tests/properties/: test_checkpoint_properties.py  test_confirmation_api_properties.py  test_status_response_properties.py  test_voice_preview_properties.py
tests/property/: test_api_props.py  test_checkpoint_properties.py  test_pipeline_props.py  test_retry_logic_props.py  test_synthesis_props.py  test_transcription_props.py  test_translation_props.py  test_url_validation_props.py
tests/unit/: test_api.py  test_audio_extractor.py  test_checkpoint_manager.py  test_downloader.py  (+14 more)
(+8 files in other folders)
