[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "douyin-video-translator"
version = "0.1.0"
description = "Standalone Python backend service for translating Douyin videos from Chinese to Vietnamese"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "celery[redis]>=5.3.0",
    "redis>=5.0.0",
    "yt-dlp>=2024.1.0",
    "openai-whisper>=20231117",
    "demucs>=4.0.0",
    "edge-tts>=6.1.0",
    "deep-translator>=1.11.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.6.0",
]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "hypothesis>=6.92.0",
    "httpx>=0.25.0",
    "pytest-cov>=4.1.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "property: property-based tests using Hypothesis",
    "integration: integration tests requiring external services",
]

[tool.mypy]
python_version = "3.11"
strict = true
